--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ PNAME=php-swoft
 TCPABLE=true
 CRONABLE=false
 AUTO_RELOAD=true
-AUTO_REGISTER=false
+AUTO_REGISTER=true # 自动注册服务
 
 # HTTP
 HTTP_HOST=0.0.0.0
